Polish ShutdownEndpoint